[gd_scene load_steps=7 format=2]

[ext_resource path="res://srv/char_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://srv/game_controller.gd" type="Script" id=2]
[ext_resource path="res://srv/control_boxes.gd" type="Script" id=3]
[ext_resource path="res://sprites/time slider.png" type="Texture" id=4]
[ext_resource path="res://srv/time.gd" type="Script" id=5]
[ext_resource path="res://srv/hint font.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sel Char Boxes" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
Type = "sel"

[node name="Char Box 1" parent="Sel Char Boxes" instance=ExtResource( 1 )]
anchor_left = 0.13
anchor_top = 0.7
anchor_right = 0.27
anchor_bottom = 0.9
margin_right = -2.00002
margin_bottom = 14.0

[node name="Char Box 2" parent="Sel Char Boxes" instance=ExtResource( 1 )]
anchor_left = 0.33
anchor_top = 0.7
anchor_right = 0.47
anchor_bottom = 0.9
margin_right = -2.0
margin_bottom = 14.0

[node name="Char Box 3" parent="Sel Char Boxes" instance=ExtResource( 1 )]
anchor_left = 0.53
anchor_top = 0.7
anchor_right = 0.67
anchor_bottom = 0.9
margin_right = -2.0
margin_bottom = 14.0

[node name="Char Box 4" parent="Sel Char Boxes" instance=ExtResource( 1 )]
anchor_left = 0.73
anchor_top = 0.7
anchor_right = 0.87
anchor_bottom = 0.9
margin_right = -2.0
margin_bottom = 14.0

[node name="Word Char Boxes" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
Type = "word"

[node name="Time" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="Time"]
modulate = Color( 1, 0.694118, 0.694118, 1 )
anchor_right = 1.0
margin_bottom = 24.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Fill" type="TextureRect" parent="Time"]
modulate = Color( 0.592157, 1, 0.556863, 1 )
anchor_right = 1.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Text" type="RichTextLabel" parent="Time"]
visible = false
anchor_right = 1.0
anchor_bottom = 0.125
margin_top = 24.0
bbcode_enabled = true
bbcode_text = "[center]1min 20s"
text = "1min 20s"

[node name="Middle Text Container" type="VBoxContainer" parent="."]
anchor_top = 0.475
anchor_right = 1.0
anchor_bottom = 0.675
alignment = 1

[node name="Middle Text" type="RichTextLabel" parent="Middle Text Container"]
margin_top = 27.0
margin_right = 800.0
margin_bottom = 69.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]"
fit_content_height = true
scroll_active = false

[connection signal="change_time" from="." to="Time" method="_on_Control_change_time"]
[connection signal="char_box_selected" from="." to="Sel Char Boxes" method="_on_Control_char_box_selected"]
[connection signal="char_chosen" from="." to="Word Char Boxes" method="_on_Control_char_chosen"]
[connection signal="chrs_created" from="." to="Sel Char Boxes" method="_on_Control_chrs_created"]
[connection signal="editing_char_selected" from="." to="Word Char Boxes" method="_on_Control_editing_char_selected"]
[connection signal="hide_boxes" from="." to="Sel Char Boxes" method="_on_Control_hide_boxes"]
[connection signal="hide_boxes" from="." to="Word Char Boxes" method="_on_Control_hide_boxes"]
[connection signal="show_boxes" from="." to="Sel Char Boxes" method="_on_Control_show_boxes"]
[connection signal="show_boxes" from="." to="Word Char Boxes" method="_on_Control_show_boxes"]
[connection signal="word_created" from="." to="Word Char Boxes" method="_on_Control_word_created"]
